# API/Controllers/IngredientController.cs
@@ -9,8 +9,15 @@ namespace API.Controllers
     [ApiController]
     public class IngredientController : CRUDController<Ingredient>
     {
+        private readonly IIngredientLogic _logic;
         public IngredientController(IIngredientLogic logic) : base(logic)
         {
+            _logic = logic;
+        }
+        [HttpGet("GetAllByRecipeId/{recipeId}")]
+        public async Task<IEnumerable<IngredientDataView>> GetAllByRecipeId(int recipeId)
+        {
+            return await _logic.GetAllByRecipeId(recipeId);
         }
     }
 }
