# API/Controllers/RecipeController.cs
@@ -9,9 +9,15 @@ namespace API.Controllers
     [ApiController]
     public class RecipeController : CRUDController<Recipe>
     {
+        private readonly IRecipeLogic _logic;
         public RecipeController(IRecipeLogic logic) : base(logic)
         {
-
+            _logic = logic;
+        }
+        [HttpPut("RecalculateMacros/{recipeId}")]
+        public async Task RecalculateMacros(int recipeId)
+        {
+            await _logic.RecalculateMacros(recipeId);
         }
     }
 }
