# Models/Models/IngredientDataView.cs
@@ -1,0 +1,29 @@
+﻿// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
+#nullable disable
+using System;
+using System.Collections.Generic;
+
+namespace Models.Models;
+
+public partial class IngredientDataView
+{
+    public int IngredientId { get; set; }
+
+    public int RecipeId { get; set; }
+
+    public int BaseMaterialId { get; set; }
+
+    public decimal Quantity { get; set; }
+
+    public string MaterialCode { get; set; }
+
+    public string MaterialName { get; set; }
+
+    public string Note { get; set; }
+
+    public int? MaterialGroupId { get; set; }
+
+    public int GroupCode { get; set; }
+
+    public string GroupName { get; set; }
+}
