# Repository/ModelRepositories/IngredientRepository.cs
@@ -1,4 +1,5 @@
-﻿using Models.Models;
+﻿using Microsoft.EntityFrameworkCore;
+using Models.Models;
 using Repository.Interfaces;
 using Repository.ModelRepositories.GenericRepository;
 
@@ -9,5 +10,11 @@ namespace Repository.ModelRepositories
         public IngredientRepository(DataBaseContext dbContext) : base(dbContext)
         {
         }
+        public async Task<IEnumerable<IngredientDataView>> GetAllByRecipeId(int recipeId)
+        {
+
+            return await _dbContext.IngredientDataViews.Where(t => t.RecipeId == recipeId).ToListAsync();
+        }
+
     }
 }
